# huli-jing

./: CONTRIBUTING.md  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
asylum/: main.py  response.json
core/: admin.py  llm.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_commitment_goal.py  0003_remove_goal_user_delete_commitment_delete_goal.py  0004_rename_is_mock_prompt_is_refined.py  0005_alter_prompt_type.py  0006_alter_prompt_type.py
goals/: urls.py
jing/: asgi.py  settings.py  urls.py  wsgi.py
llm/: admin.py  index.html  models.py  schema.py  serializers.py  urls.py  views.py
llm/migrations/: 0001_initial.py  0002_alter_task_priority.py  0003_dailyschedule_pattern_and_more.py  0004_remove_dailyschedule_pattern_and_more.py  0005_rename_updated_commitments_dailyschedule_cleaned_commitments.py  0006_dailyschedule_user.py  0007_rename_cleaned_commitments_dailyschedule_updated_commitment.py  0008_rename_updated_commitment_dailyschedule_updated_commitments.py  0009_task_completed_task_feedback_task_rating_and_more.py
llm/planners/: daily_plan.py  onboarding.py
llm/prompts/: __init__.py  daily_plan.py  onboarding.py
llm/services/: gemini_client.py  generate_hash.py  prompt_cache.py  save_daily_plan_to_db.py  save_onboarding.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_userpattern.py  0003_commitment_goal.py
